--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,4 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Say hello world
-      run: echo Hello, world!
+    - uses: bumfo/push-workspace@master
