--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - uses: bumfo/push-workspace@master
+    - uses: bumfo/push-workspace@v1-release
