--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: bumfo/push-workspace@v1-release
+      with:
+        myInput: 'Github!!!'
