--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: Write README.md
+      run: |
+        echo Hello World >> README.md
     - uses: bumfo/push-workspace@v1-release
       with:
-        myInput: 'Github!!!!'
+        ref: 'refs/heads/dist'
