--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,5 @@ jobs:
     - uses: bumfo/push-workspace@v1-release
       with:
         ref: 'refs/heads/dist'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
