--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
 name: CI
 
 on:
-  push:
-    branches:
-    - trigger
-  schedule:
-  - cron: '0 0 * * *'
+  - push:
+      branches:
+      - trigger
+  - schedule:
+    - cron: '0 0 * * *'
+  - repository_dispatch
 
 jobs:
   build:
