--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,11 @@
 name: CI
 
 on:
-- push:
+  push:
     branches:
     - trigger
-- schedule:
+  schedule:
   - cron: '0 0 * * *'
-- repository_dispatch
 
 jobs:
   build:
